--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,8 @@ dependencies {
     //shimmer
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
+//    Country Code Picker
+    implementation'com.hbb20:ccp:2.5.3'
+
+
 }
