--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,21 @@
         android:theme="@style/Theme.RSCOOP"
         tools:targetApi="31">
         <activity
+            android:name=".RecentProperties.RecentPropertiesView"
+            android:exported="false" />
+        <activity
+            android:name=".Authentication.PhoneVerification"
+            android:exported="false" />
+        <activity
+            android:name=".Authentication.LoginPhone"
+            android:exported="false" />
+        <activity
+            android:name=".Authentication.ForgotPassword"
+            android:exported="false" />
+        <activity
+            android:name=".Authentication.LoginActivity"
+            android:exported="false" />
+        <activity
             android:name=".RecentProperties.ClientCountries"
             android:exported="false">
             <meta-data
