--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,7 @@ dependencies {
     //shimmer
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
+    //google Map
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
+
 }
