--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -14,6 +17,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RSCOOP"
         tools:targetApi="31">
+        <activity
+            android:name=".RecentProperties.HotelsLocations"
+            android:exported="false">
+            <meta-data
+                android:name="com.google.android.maps.v2.https://www.openstreetmap.org/oauth/access_token"
+                android:value="https://www.openstreetmap.org/oauth/access_token" />
+        </activity>
         <activity
             android:name=".RecentProperties.ClientCountries"
             android:exported="false">
