--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,21 +14,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RSCOOP"
         tools:targetApi="31">
-        <activity
-            android:name=".RecentProperties.RecentPropertiesView"
-            android:exported="false" />
-        <activity
-            android:name=".Authentication.PhoneVerification"
-            android:exported="false" />
-        <activity
-            android:name=".Authentication.LoginPhone"
-            android:exported="false" />
-        <activity
-            android:name=".Authentication.ForgotPassword"
-            android:exported="false" />
-        <activity
-            android:name=".Authentication.LoginActivity"
-            android:exported="false" />
+
+        <activity android:name=".RecentProperties.RecentPropertiesView" android:exported="false"/>
+        <activity android:name=".Authentication.PhoneVerification" android:exported="false"/>
+        <activity android:name=".Authentication.LoginPhone" android:exported="false"/>
+        <activity android:name=".Authentication.ForgotPassword" android:exported="false"/>
+        <activity android:name=".Authentication.LoginActivity" android:exported="false"/>
+
         <activity
             android:name=".RecentProperties.ClientCountries"
             android:exported="false">
@@ -68,6 +60,19 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
+        <activity android:name=".RecentProperties.HotelsLocations"
+            android:exported="false"
+            >
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value=""
+                >
+
+            </meta-data>
+
+        </activity>
     </application>
 
 </manifest>
