--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.RSCOOP"
         tools:targetApi="31">
         <activity
+            android:name=".DashBoard.DashBoard.AdminDashBoard.Profile.AddClient"
+            android:exported="false" />
+        <activity
             android:name=".RecentProperties.ViewAllTasks"
             android:exported="false" />
         <activity
@@ -80,7 +83,7 @@
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
-                android:value=""></meta-data>
+                android:value="" />
         </activity>
     </application>
 
