--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.rscoop'
+    namespace 'com.retvens.rscoop'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.rscoop"
+        applicationId "com.retvens.rscoop"
         minSdk 26
         targetSdk 33
         versionCode 1
@@ -50,6 +50,8 @@ dependencies {
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.14.2'
@@ -60,6 +62,9 @@ dependencies {
 
     //maps
     implementation 'com.google.maps.android:android-maps-utils:2.3.0'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation 'com.google.maps.android:maps-utils-ktx:3.4.0'
 
     //
     implementation'com.hbb20:ccp:2.5.3'
