--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RSCOOP"
         tools:targetApi="31">
-
-
+        <activity
+            android:name="com.retvence.rscoop.DashBoardIgniter.AddNewTaskActivity"
+            android:exported="false" />
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
@@ -32,7 +33,6 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyC7qNJBepL9gkSOmXO2YQcD_vNKXskTtBQ" />
-
 
         <activity
             android:name=".DashBoard.DashBoard.AdminDashBoard.Profile.AddClient"
