--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/Theme.RSCOOP"
         tools:targetApi="31">
         <activity
-            android:name="com.retvence.rscoop.DashBoardIgniter.IgniterDashBoard"
+            android:name="com.retvence.rscoop.DashBoardIgniter.HotelProfile"
             android:exported="true">
 
             <intent-filter>
@@ -26,7 +26,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
-
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name="com.retvence.rscoop.DashBoardIgniter.IgniterDashBoard"
+            android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -72,7 +78,9 @@
             android:exported="false" />
         <activity
             android:name=".Authentication.LoginActivity"
-            android:exported="false"></activity>
+            android:exported="true">
+
+        </activity>
         <activity
             android:name=".ClientInformation.ClientInfo"
             android:exported="false" />
@@ -87,7 +95,6 @@
             android:name=".MainActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:exported="true">
-
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
