--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,13 @@
         android:theme="@style/Theme.RSCOOP"
         tools:targetApi="31">
         <activity
+            android:name="com.retvence.rscoop.DashBoardIgniter.DetailTaskEditActivity"
+            android:exported="false" />
+        <activity
             android:name="com.retvence.rscoop.DashBoard.DashBoard.AdminDashBoard.AdminDashBoard"
             android:exported="false" />
         <activity
-            android:name=".Authentication.LoginActivity"
+            android:name="com.retvence.rscoop.DashBoardIgniter.DetailTaskActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -83,7 +86,7 @@
             android:exported="false" />
         <activity
             android:name="com.retvence.rscoop.DashBoardIgniter.AddNewTaskActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".ClientInformation.ClientInfo"
             android:exported="false" />
@@ -110,7 +113,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name="com.retvence.rscoop.DashBoardIgniter.DetailTaskActivity"
+            android:name=".Authentication.LoginActivity"
             android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
