--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,9 +47,14 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'androidx.fragment:fragment:1.4.1'
     implementation 'androidx.fragment:fragment:1.5.0-alpha04'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.0"
+
 
     implementation "androidx.recyclerview:recyclerview:1.2.1"
 
@@ -77,4 +82,6 @@ dependencies {
     implementation'com.hbb20:ccp:2.5.3'
 
     implementation 'com.github.MackHartley:RoundedProgressBar:3.0.0'
+
+    implementation 'com.github.JoshHalvorson:calendar-date-range-picker:0.2.0'
 }
