--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,17 +17,27 @@
         android:theme="@style/Theme.RSCOOP"
         tools:targetApi="31">
         <activity
+            android:name="com.retvence.rscoop.DashBoardClient.ClientDetailTaskActivity"
+            android:exported="false" />
+        <activity
+            android:name="com.retvence.rscoop.DashBoardClient.ViewAllTaskOfProperty"
+            android:exported="false" />
+        <activity
+            android:name="com.retvence.rscoop.DashBoardClient.ClientDashboardActivity"
+            android:exported="false" />
+        <activity
             android:name="com.retvence.rscoop.DashBoardIgniter.DetailTaskEditActivity"
             android:exported="false" />
         <activity
             android:name="com.retvence.rscoop.DashBoard.DashBoard.AdminDashBoard.AdminDashBoard"
             android:exported="false" />
         <activity
-            android:name=".Authentication.LoginActivity"
-            android:exported="true">
-
+            android:name=".MainActivity"
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
@@ -36,19 +46,26 @@
                 android:value="" />
         </activity>
         <activity
-            android:name="com.retvence.rscoop.DashBoardIgniter.AddNewTaskActivity"
+            android:name=".Authentication.LoginActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
             android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name="com.retvence.rscoop.DashBoardIgniter.AddNewTaskRecentProperty"
+            android:exported="true">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name="com.retvence.rscoop.DashBoardIgniter.DetailTaskActivity"
             android:exported="false" />
         <activity
-        android:name="com.retvence.rscoop.DashBoardIgniter.DetailTaskActivity"
-        android:exported="true" />
+            android:name="com.retvence.rscoop.DashBoardIgniter.AddNewTaskActivity"
+            android:exported="true" />
         <activity
             android:name="com.retvence.rscoop.DashBoardIgniter.HotelProfile"
             android:exported="true">
@@ -58,9 +75,7 @@
         </activity>
         <activity
             android:name="com.retvence.rscoop.DashBoardIgniter.IgniterDashBoard"
-            android:exported="true">
-
-        </activity>
+            android:exported="true" />
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
@@ -93,11 +108,11 @@
             android:exported="false" />
         <activity
             android:name=".Authentication.LoginPhone"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".Authentication.ForgotPassword"
             android:exported="false" />
-
         <activity
             android:name=".ClientInformation.ClientInfo"
             android:exported="false" />
@@ -109,20 +124,13 @@
                 android:value="AIzaSyC7qNJBepL9gkSOmXO2YQcD_vNKXskTtBQ" />
         </activity>
         <activity
-            android:name=".MainActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden"
-            android:exported="true">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
             android:name=".OnBoardingScreen.OnBoardingScreen"
             android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
