--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'androidx.fragment:fragment:1.4.1'
     implementation 'androidx.fragment:fragment:1.5.0-alpha04'
+    implementation 'com.google.firebase:firebase-appdistribution-api-ktx:16.0.0-beta05'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
