--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.RSCOOP"
         tools:targetApi="31">
         <activity
+            android:name="com.retvence.rscoop.DashBoardClient.ViewAllPropertiesActivity"
+            android:exported="false" />
+        <activity
             android:name="com.retvence.rscoop.DashBoardClient.ClientDetailTaskActivity"
             android:exported="false" />
         <activity
