--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation 'com.google.maps.android:maps-utils-ktx:3.4.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
 
     //Country Code Picker
     implementation'com.hbb20:ccp:2.5.3'
