--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation 'androidx.fragment:fragment:1.4.1'
     implementation 'androidx.fragment:fragment:1.5.0-alpha04'
     implementation 'com.google.firebase:firebase-appdistribution-api-ktx:16.0.0-beta05'
+    implementation 'com.google.android.gms:play-services-cast-framework:21.2.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
@@ -89,4 +90,8 @@ dependencies {
 
     //Custom ProgressBar
     implementation 'com.github.emreesen27:Android-Nested-Progress:v1.0.2'
+
+    //cropper
+    implementation"com.theartofdev.edmodo:android-image-cropper:2.8.0"
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
